--- a/Mockup/template/style.css
+++ b/Mockup/template/style.css
@@ -17,20 +17,21 @@ body{
     height: 100%;
 }
 .header{
-    grid-area: header;
-    background-color: #96989b;
-    color: #ffffff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  grid-area: header;
+  background-color: #203040;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .brand a{
     color: #ffffff;
     font-size: 2.5rem;
-    font-weight : bold;
+    font-weight: bold;
     text-decoration: none;
 }
 .header-links a{
-    color:#ffffff;
+    color: #ffffff;
     text-decoration: none;
 }
 .header-links a:hover{
@@ -68,11 +69,12 @@ a:hover{
     height: 100%;
 }
 .product-name{
-    font-size= 2rem;
+    font-size: 2rem;
     font-weight: bold;
 }
 .brand{
 font-size: 2rem;
+color:aqua
 }
 .price{
 font-size: 2.5rem;
@@ -82,6 +84,6 @@ font-weight: bold;
 max-width: 34rem;
 max-height: 34rem;
 }
-.rating{
+.product-rating{
     margin-bottom: 1rem;
 }
