--- a/Code/frontend/src/App.css
+++ b/Code/frontend/src/App.css
@@ -126,3 +126,32 @@ max-height: 34rem;
 .product-rating{
   margin-bottom: 1rem;
 }
+/* Sidebar */
+.brand button {
+  font-size: 3rem;
+  padding: .5rem;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+.sidebar{
+  position: fixed;
+  transform: translateX(-30rem);
+  width: 30rem;
+  background-color: white;
+  height: 100%;
+}
+.sidebar.open{
+  transform: translatex(0);
+}
+.sidebar-close-button{
+  border-radius: 50%;
+  border: .1rem #0000 solid;
+  width: 3rem;
+  height: 3rem;
+  padding: 0.5rem;
+  font-size: 2rem;
+  padding-top: 0;
+  cursor: pointer;
+}
