--- a/Code/frontend/src/index.css
+++ b/Code/frontend/src/index.css
@@ -1,13 +1,209 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+html{
+  font-size: 62.5%; /* 16px * 62.5 = 10px = 1 rem */
+  box-sizing: border-box;
+}
+body{
+  font: 1.6rem Helvetica;
+  height: 100vh;
+  margin: 0;
+}
+.grid-container{
+  display: grid;
+  grid-template-areas:
+  "header"
+  "main";
+  grid-template-columns: 1fr;
+  grid-template-rows: 5rem 1fr;
+  height: 100%;
+}
+.header{
+grid-area: header;
+background-color: #203040;
+color: #ffffff;
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+.brand a{
+  color: #ffffff;
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-decoration: none;
+}
+.header-links a{
+  color: #ffffff;
+  text-decoration: none;
+}
+.header-links a :hover{
+  color: #ff8000;
+}
+.main{
+  grid-area: main;
+} 
+
+/* Home Screen */
+.products {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+a{
+  text-decoration: none;
+}
+a:hover{
+  color:#ff8000
+}
+.products li {
+list-style-type: none;
+padding: 0;
+flex: 0 1 34rem;
+margin: 1rem;
+height: 50rem;
+border-bottom: .1rem #c0c0c0 solid;
+}
+.product{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.product-name{
+  font-size: 2rem;
+  font-weight: bold;
+}
+.brand{
+font-size: 2rem;
+color:aqua
+}
+.price{
+font-size: 2.5rem;
+font-weight: bold;
+}
+.image{
+max-width: 34rem;
+max-height: 34rem;
+}
+.product-rating{
+  margin-bottom: 1rem;
+}
+/* Sidebar */
+.brand button {
+  font-size: 3rem;
+  padding: .5rem;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+.sidebar{
+  position: fixed;
+  transform: translateX(-30rem);
+  width: 30rem;
+  background-color: white;
+  height: 100%;
+}
+.sidebar.open{
+  transform: translatex(0);
+}
+.sidebar-close-button{
+  border-radius: 50%;
+  border: .1rem #0000 solid;
+  width: 3rem;
+  height: 3rem;
+  padding: 0.5rem;
+  font-size: 2rem;
+  padding-top: 0;
+  cursor: pointer;
+}
+/* details */
+.details{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 1rem;
+}
+.details-image {
+  flex: 2 1 60rem;
+}
+.details-image img{
+  max-width: 60rem;
+  widows: 100%;
+}
+.details-info {
+      flex: 1 1 30rem;  
+    }
+.details-action {
+  flex: 1 1 30rem;
+}
+.details-info ul, .details-action ul{
+  list-style-type: none;
+  padding: 0;
+}
+.details-info ul, .details-action li{
+ margin-bottom: 1rem;
+}
+.back-to-result {
+  padding: 1rem;
+}
+.details-action{
+  border: .1rem #61dafb solid;
+  border-radius: 0.5rem;
+  background-color: #c0c0c0;
+  padding: 1rem;
+}
+.details-action ul li:last-child{
+  display: flex;
+  flex-direction: column;
+}
+.buttton{
+  padding: 1rem;
+  border: .1rem #808080 solid;
+  cursor: pointer;
+}
+.button:hover{
+  border: .1rem #c0c0c0 solid;
+}
+.button.primary{
+  background-color: #f0c040;
 }
