--- a/Code/frontend/src/App.css
+++ b/Code/frontend/src/App.css
@@ -127,6 +127,7 @@ max-height: 34rem;
   margin-bottom: 1rem;
 }
 /* Sidebar */
+
 .brand button {
   font-size: 3rem;
   padding: .5rem;
@@ -142,7 +143,7 @@ max-height: 34rem;
   background-color: white;
   height: 100%;
 }
-.sidebar.open{
+.sidebaropen{
   transform: translatex(0);
 }
 .sidebar-close-button{
